Remove usage of zipfs in installer
This allows running server directly after forge install.