@@ -11,6 +11,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.Reader;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -23,12 +24,11 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
 import java.security.AccessControlContext;
 import java.util.AbstractMap;
 import java.util.ArrayList;
@@ -47,24 +47,14 @@ import java.util.concurrent.Executors;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.jar.JarFile;
+import java.util.jar.JarOutputStream;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class ForgeInstaller {
 
     private static final MethodHandles.Lookup IMPL_LOOKUP = Unsafe.lookup();
-    private static final String[] MAVEN_REPO = {
-        "https://arclight.mcxk.net/"
-    };
-    private static final String INSTALLER_URL = "https://arclight.mcxk.net/net/minecraftforge/forge/%s-%s/forge-%s-%s-installer.jar";
-    private static final String SERVER_URL = "https://arclight.mcxk.net/net/minecraft/server/minecraft_server.%s.jar";
-    private static final String MAPPING_URL = "https://arclight.mcxk.net/net/minecraft/server/mappings_server.%s.txt";
-    private static final Map<String, String> VERSION_HASH = Map.of(
-        "1.19.2", "f69c284232d7c7580bd89a5a4931c3581eae1378"
-    );
-    private static final Map<String, String> MAPPING_HASH = Map.of(
-        "1.19.2", "ed5e6e8334ad67f5af0150beed0f3d156d74bd57"
-    );
 
     public static List<Path> modInstall(Consumer<String> logger) throws Throwable {
         InputStream stream = ForgeInstaller.class.getModule().getResourceAsStream("/META-INF/installer.json");
@@ -104,18 +94,16 @@ public class ForgeInstaller {
                     Process process = builder.start();
                     process.waitFor();
                 } catch (IOException e) {
-                    URLClassLoader loader = new URLClassLoader(
+                    try (URLClassLoader loader = new URLClassLoader(
                         new URL[]{new File(String.format("forge-%s-%s-installer.jar", installInfo.installer.minecraft, installInfo.installer.forge)).toURI().toURL()},
-                        ForgeInstaller.class.getClassLoader().getParent());
-                    Method method = loader.loadClass("net.minecraftforge.installer.SimpleInstaller").getMethod("main", String[].class);
-                    method.invoke(null, (Object) new String[]{"--installServer", ".", "--debug"});
+                        ForgeInstaller.class.getClassLoader().getParent())) {
+                        Method method = loader.loadClass("net.minecraftforge.installer.SimpleInstaller").getMethod("main", String[].class);
+                        method.invoke(null, (Object) new String[]{"--installServer", ".", "--debug"});
+                    }
                 }
             }
             handleFutures(System.out::println, array);
             pool.shutdownNow();
-            if (installForge) {
-                System.exit(0);
-            }
         }
         return classpath(path, installInfo);
     }
@@ -127,19 +115,55 @@ public class ForgeInstaller {
         });
     }
 
+    private record MinecraftData(String mirror, String serverUrl, String serverHash, String mappingUrl,
+                                 String mappingHash) {}
+
     @SuppressWarnings("unchecked")
-    private static CompletableFuture<Path>[] installForge(InstallInfo info, ExecutorService pool, Consumer<String> logger) throws Exception {
-        String format = String.format(INSTALLER_URL, info.installer.minecraft, info.installer.forge, info.installer.minecraft, info.installer.forge);
+    private static CompletableFuture<Path>[] installForge(InstallInfo info, ExecutorService pool, Consumer<String> logger) {
+        var minecraftData = CompletableFuture.supplyAsync(() -> {
+            logger.accept("Downloading mc version manifest...");
+            for (Map.Entry<String, String> entry : Mirrors.getVersionManifest()) {
+                try (var stream = FileDownloader.read(entry.getValue())) {
+                    var bytes = stream.readAllBytes();
+                    var element = new JsonParser().parse(new String(bytes, StandardCharsets.UTF_8)).getAsJsonObject();
+                    var versions = element.getAsJsonArray("versions");
+                    for (var version : versions) {
+                        var id = version.getAsJsonObject().get("id").getAsString();
+                        if (Objects.equals(id, info.installer.minecraft)) {
+                            var url = version.getAsJsonObject().get("url").getAsString();
+                            try (var versionStream = FileDownloader.read(url)) {
+                                var object = new JsonParser().parse(new String(versionStream.readAllBytes(), StandardCharsets.UTF_8)).getAsJsonObject();
+                                var downloads = object.getAsJsonObject("downloads");
+                                var server = downloads.getAsJsonObject("server");
+                                var serverUrl = server.get("url").getAsString();
+                                var serverHash = server.get("sha1").getAsString();
+                                var mapping = downloads.getAsJsonObject("server_mappings");
+                                var mappingUrl = mapping.get("url").getAsString();
+                                var mappingHash = mapping.get("sha1").getAsString();
+                                logger.accept("Minecraft version: %s, server: %s, mappings: %s".formatted(info.installer.minecraft, serverHash, mappingHash));
+                                return new MinecraftData(entry.getKey(),
+                                    Mirrors.mapMojangMirror(serverUrl, entry.getKey()), serverHash,
+                                    Mirrors.mapMojangMirror(mappingUrl, entry.getKey()), mappingHash);
+                            }
+                        }
+                    }
+                    logger.accept("Version %s not available in %s".formatted(info.installer.minecraft, entry.getKey()));
+                } catch (Exception e) {
+                    logger.accept("Failed to download manifest from " + entry.getKey() + "\n  " + e);
+                }
+            }
+            return null;
+        }, pool);
+        String coord = String.format("net.minecraftforge:forge:%s-%s:installer", info.installer.minecraft, info.installer.forge);
         String dist = String.format("forge-%s-%s-installer.jar", info.installer.minecraft, info.installer.forge);
-        FileDownloader fd = new FileDownloader(format, dist, info.installer.hash);
-        var installerFuture = reportSupply(pool, logger).apply(fd).thenApply(path -> {
-            try {
-                FileSystem system = FileSystems.newFileSystem(path, (ClassLoader) null);
+        MavenDownloader forge = new MavenDownloader(Mirrors.getMavenRepo(), coord, dist, info.installer.hash);
+        var installerFuture = reportSupply(pool, logger).apply(forge).thenCombineAsync(minecraftData, (path, data) -> {
+            try (var jarFile = new JarFile(path.toFile())) {
                 Map<String, Map.Entry<String, String>> map = new HashMap<>();
-                Path profile = system.getPath("install_profile.json");
-                map.putAll(profileLibraries(profile, info.installer.minecraft));
-                Path version = system.getPath("version.json");
-                map.putAll(profileLibraries(version, info.installer.minecraft));
+                var profile = jarFile.getEntry("install_profile.json");
+                map.putAll(profileLibraries(new InputStreamReader(jarFile.getInputStream(profile)), info.installer.minecraft, data));
+                var version = jarFile.getEntry("version.json");
+                map.putAll(profileLibraries(new InputStreamReader(jarFile.getInputStream(version)), info.installer.minecraft, data));
                 List<Supplier<Path>> suppliers = checkMaven(map);
                 CompletableFuture<?>[] array = suppliers.stream().map(reportSupply(pool, logger)).toArray(CompletableFuture[]::new);
                 handleFutures(logger, array);
@@ -148,10 +172,10 @@ public class ForgeInstaller {
             }
             return stripDownloadMapping(path, logger);
         });
-        var serverFuture = reportSupply(pool, logger).apply(
-            new FileDownloader(String.format(SERVER_URL, info.installer.minecraft),
-                String.format("libraries/net/minecraft/server/%1$s/server-%1$s.jar", info.installer.minecraft), VERSION_HASH.get(info.installer.minecraft))
-        );
+        var serverFuture = minecraftData.thenCompose(data -> reportSupply(pool, logger).apply(
+            new FileDownloader(String.format(data.serverUrl, info.installer.minecraft),
+                String.format("libraries/net/minecraft/server/%1$s/server-%1$s.jar", info.installer.minecraft), data.serverHash)
+        ));
         return new CompletableFuture[]{installerFuture, serverFuture};
     }
 
@@ -162,34 +186,38 @@ public class ForgeInstaller {
             if (!Files.isDirectory(path.getParent())) {
                 Files.createDirectories(path.getParent());
             }
-            Files.copy(installer, path, StandardCopyOption.REPLACE_EXISTING);
-            try (var fs = FileSystems.newFileSystem(path)) {
-                // strip signature
-                Files.walk(fs.getPath("META-INF"))
-                    .filter(it -> !Files.isDirectory(it))
-                    .filter(it -> it.toString().endsWith(".SF") || it.toString().endsWith(".DSA") || it.toString().endsWith(".RSA"))
-                    .forEach(it -> {
-                        try {
-                            Files.delete(it);
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
+            Files.deleteIfExists(path);
+            try (var from = new JarFile(installer.toFile());
+                 var to = new JarOutputStream(Files.newOutputStream(path, StandardOpenOption.CREATE))) {
+                var entries = from.entries();
+                while (entries.hasMoreElements()) {
+                    var entry = entries.nextElement();
+                    // strip signature
+                    var name = entry.getName();
+                    if (name.endsWith(".SF") || name.endsWith(".DSA") || name.endsWith(".RSA")) {
+                        continue;
+                    }
+                    if (name.equals("install_profile.json")) {
+                        var element = new JsonParser().parse(new InputStreamReader(from.getInputStream(entry)));
+                        var processors = element.getAsJsonObject().getAsJsonArray("processors");
+                        outer:
+                        for (var i = 0; i < processors.size(); i++) {
+                            var processor = processors.get(i).getAsJsonObject();
+                            var args = processor.getAsJsonArray("args");
+                            for (var arg : args) {
+                                if (arg.getAsString().equals("DOWNLOAD_MOJMAPS")) {
+                                    processors.remove(i);
+                                    break outer;
+                                }
+                            }
                         }
-                    });
-                var profile = fs.getPath("install_profile.json");
-                var element = new JsonParser().parse(Files.readString(profile));
-                var processors = element.getAsJsonObject().getAsJsonArray("processors");
-                outer:
-                for (var i = 0; i < processors.size(); i++) {
-                    var processor = processors.get(i).getAsJsonObject();
-                    var args = processor.getAsJsonArray("args");
-                    for (var arg : args) {
-                        if (arg.getAsString().equals("DOWNLOAD_MOJMAPS")) {
-                            processors.remove(i);
-                            break outer;
-                        }
+                        to.putNextEntry(entry);
+                        to.write(new Gson().toJson(element).getBytes(StandardCharsets.UTF_8));
+                    } else {
+                        to.putNextEntry(entry);
+                        from.getInputStream(entry).transferTo(to);
                     }
                 }
-                Files.writeString(profile, new Gson().toJson(element));
             }
             return path;
         } catch (Exception e) {
@@ -211,9 +239,9 @@ public class ForgeInstaller {
         }
     }
 
-    private static Map<String, Map.Entry<String, String>> profileLibraries(Path path, String minecraft) throws IOException {
+    private static Map<String, Map.Entry<String, String>> profileLibraries(Reader reader, String minecraft, MinecraftData minecraftData) throws IOException {
         Map<String, Map.Entry<String, String>> ret = new HashMap<>();
-        var object = new JsonParser().parse(Files.newBufferedReader(path)).getAsJsonObject();
+        var object = new JsonParser().parse(reader).getAsJsonObject();
         JsonArray array = object.getAsJsonArray("libraries");
         for (JsonElement element : array) {
             String name = element.getAsJsonObject().get("name").getAsString();
@@ -228,7 +256,7 @@ public class ForgeInstaller {
             if (data.has("MOJMAPS")) {
                 var serverMapping = data.getAsJsonObject("MOJMAPS").get("server").getAsString();
                 ret.put(serverMapping.substring(1, serverMapping.length() - 1),
-                    new AbstractMap.SimpleImmutableEntry<>(MAPPING_HASH.get(minecraft), MAPPING_URL.formatted(minecraft)));
+                    new AbstractMap.SimpleImmutableEntry<>(minecraftData.mappingHash, minecraftData.mappingUrl));
             }
         }
         return ret;
@@ -253,20 +281,20 @@ public class ForgeInstaller {
                 try {
                     String fileHash = Util.hash(path);
                     if (!fileHash.equals(hash)) {
-                        incomplete.add(new MavenDownloader(MAVEN_REPO, maven, path, hash, url));
+                        incomplete.add(new MavenDownloader(Mirrors.getMavenRepo(), maven, path, hash, url));
                     }
                 } catch (Exception e) {
-                    incomplete.add(new MavenDownloader(MAVEN_REPO, maven, path, hash, url));
+                    incomplete.add(new MavenDownloader(Mirrors.getMavenRepo(), maven, path, hash, url));
                 }
             } else {
-                incomplete.add(new MavenDownloader(MAVEN_REPO, maven, path, hash, url));
+                incomplete.add(new MavenDownloader(Mirrors.getMavenRepo(), maven, path, hash, url));
             }
         }
         return incomplete;
     }
 
     private static boolean forgeClasspathMissing(Path path) throws Exception {
-        for (String arg : Files.lines(path).collect(Collectors.toList())) {
+        for (String arg : Files.lines(path).toList()) {
             if (arg.startsWith("-p ")) {
                 var modules = arg.substring(2).trim();
                 if (!Arrays.stream(modules.split(File.pathSeparator)).map(Paths::get).allMatch(Files::exists)) {
@@ -292,7 +320,7 @@ public class ForgeInstaller {
         List<String> ignores = new ArrayList<>();
         List<String> merges = new ArrayList<>();
         var self = new File(ForgeInstaller.class.getProtectionDomain().getCodeSource().getLocation().toURI()).toPath();
-        for (String arg : Files.lines(path).collect(Collectors.toList())) {
+        for (String arg : Files.lines(path).toList()) {
             if (jvmArgs && arg.startsWith("-")) {
                 if (arg.startsWith("-p ")) {
                     addModules(arg.substring(2).trim());
@@ -418,19 +446,7 @@ public class ForgeInstaller {
         return new ParserData(source[0], source[1], all[1]);
     }
 
-    private static class ParserData {
-
-        final String module;
-        final String packages;
-        final String target;
-
-        ParserData(String module, String packages, String target) {
-            this.module = module;
-            this.packages = packages;
-            this.target = target;
-        }
-
-    }
+    private record ParserData(String module, String packages, String target) {}
 
     private static void addExtra(List<String> extras, MethodHandle implAddExtraMH, MethodHandle implAddExtraToAllUnnamedMH) {
         extras.forEach(extra -> {
